# conversational-bi-agent

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.in  requirements.txt  test_ui.py
backend/app/core/: chart_builder.py  chart_selector.py  db.py  exceptions.py  llm.py  query_runner.py  sql_generator.py  sql_validator.py  summarizer.py
backend/app/routes/: query.py
backend/prompts/: sql_system_prompt.txt
backend/tests/: conftest.py  test_chart_selector.py  test_db.py  test_query_runner.py  test_sql_generator.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: query.ts
frontend/src/components/: ChartRenderer.tsx  ChatInput.tsx  ChatMessage.tsx  EmptyState.tsx  ErrorCard.tsx  Footer.tsx  Header.tsx  QueryHistoryPanel.tsx  ResultCard.tsx  SessionCard.tsx  Sidebar.tsx  SlowQueryWarning.tsx  SqlViewer.tsx  UnavailableCard.tsx
frontend/src/hooks/: useChat.ts  useSessions.ts
frontend/src/types/: index.ts  session.ts
rules/: api.md  errors.md  frontend.md  logging.md  testing.md
